# image-pro-cacaws_copy

./: .env.example  .eslintignore  .gitignore  QWEN.md  README.md  ai-config.json  eslint.config.js  index.html  new_feat_intro.md  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: ai-issue-handler.yml  ai-pr-reviewer.yml  auto-fix.yml  auto-merge.yml  build.yml  dependabot-auto-merge.yml  deploy-supabase.yml  github-pages.yml  report-build-failure.yml
assets/: index-BbxAvfrW.js  index-BvY6gNth.css  index-CEu5wuxX.js  index-CPHdQGSV.js  index-CurEFewK.js  index-Cxpg_Be4.js  index-DGcXzxMq.css  index-DeRNYYyN.css
dist_electron/: main.js  preload.js
electron/: main.ts  preload.ts
scripts/: ai_issue_handler.cjs  ai_issue_handler.js  ai_pr_reviewer.cjs  build-and-release.bat  build-and-release.sh  merge-exports.js  setup-dev-environment.bat  setup-dev-environment.sh  setup-source-repo.js  source-repo-processor.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Auth.tsx  BatchProcessor.tsx  CollectionView.tsx  EbayConfig.tsx  ImageAnalysisPanel.tsx  ImageEditor.tsx  PriceDashboard.tsx  Settings.tsx  SourceRepoManager.tsx
src/lib/: supabase.ts  themeManager.ts
src/types/: index.ts
src/utils/: apiClient.ts  duplicateDetection.ts  ebayApi.ts  exportUtils.ts  facebookApi.ts  filenameGenerator.ts  imageProcessing.ts  localScanner.ts  metadataHandler.ts
supabase/: package-lock.json  package.json
(+17 files in other folders)
