[package]
name = "image-pro"
version = "1.0.0"
description = "Professional Batch Image Processing Application"
authors = ["Image Pro Team"]
license = ""
repository = ""
edition = "2021"

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
tauri-build = { version = "1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it will run with the `dev` feature
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]